# SoftwareRenderer

./: CMakeLists.txt
modules/: FindSDL_gfx.cmake
src/: array.c  array.h  bitmap.c  bitmap.h  display.c  display.h  main.c  rasterizer.c  rasterizer.h  raycaster.c  raycaster.h  stb.h  stb_image.h  stb_image_write.h  util.h  vecmath.c  vecmath.h  vertex.c  vertex.h
